--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
        class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
       Signup
     </a>
+    <a href="login.html" 
+       class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
+      Signup
+    </a>
   </div>
 </div>
 
