--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </a>
     <a href="login.html" 
        class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
-      Signup
+      Login
     </a>
   </div>
 </div>
