--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
   <!-- Right side -->
   <div class="flex space-x-4 mr-8">
-    <a href="library.html" 
+    <a href="dashboard.html" 
        class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
-      Go to Library
+      Dashboard
     </a>
     <a href="signup.html" 
        class="px-4 py-2 bg-black text-white rounded-lg shadow hover:opacity-80">
